<resources>
    <string name="app_name">Atom Assignment</string>
    <string name="fragmentLabelLogin">Login</string>
    <string name="contentDescriptionIconMeditation">Meditation Icon</string>
    <string name="captionMeditationHabit">Make meditation a habit you love</string>
    <string name="buttonTextGoogleLogin">Continue with Google</string>
    <string name="buttonTextGuestLogin">Continue as Guest</string>
    <string name="captionTermsAndConditions">By creating an account you agree to our Terms of Service and Privacy Policy</string>
    <string name="snackbarMessageLoginFailed">Login failed</string>
    <string name="contentDescriptionMindfulness">Mindfulness icon</string>
    <string name="captionMindfulnessHomeFragment">A more mindful you</string>
    <string name="captionMindfulnessFragmentHome">build your meditation experience</string>
    <string name="fragmentLabelHome">Home</string>
    <string name="labelRegistrationFragment">Register</string>
    <string name="introTextRegistration">Hi, what do your friends call you?</string>
    <string name="hintTextName">Name</string>
    <string name="buttonTextContinue">Continue</string>
    <string name="loginDisplayNameMessage">Logged in as %1$s</string>
    <string name="labelRedirectFragment">Redirect</string>
    <string name="buttonTextLogout">Logout</string>
</resources>