<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/meditationIcon"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/contentDescriptionIconMeditation"
            app:layout_constraintBottom_toTopOf="@+id/captionMeditationHabit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic__meditation" />

        <TextView
            android:id="@+id/captionMeditationHabit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/captionMeditationHabit"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/loginWithGoogle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meditationIcon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginWithGoogle"
            style="@style/Widget.LoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/buttonTextGoogleLogin"
            app:layout_constraintBottom_toTopOf="@+id/loginAsGuest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captionMeditationHabit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginAsGuest"
            style="@style/Widget.LoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/buttonTextGuestLogin"
            app:layout_constraintBottom_toTopOf="@+id/termsAndConditions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginWithGoogle" />

        <TextView
            android:id="@+id/termsAndConditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/captionTermsAndConditions"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>